Tests for predictor fix (I313).